greeter/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greeter-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: greeter
      version: v1
  template:
    metadata:
      labels:
        app: greeter
        version: v1
    spec:
      containers:
        - name: greeter
          image: fallmx/greeter:1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greeter-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: greeter
      version: v2
  template:
    metadata:
      labels:
        app: greeter
        version: v2
    spec:
      containers:
        - name: greeter
          image: fallmx/greeter:2
