greeter/manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: reviews
spec:
  parentRefs:
  - group: ""
    kind: Service
    name: greeter
    port: 8080
  rules:
  - backendRefs:
    - name: greeter-v1
      port: 8080
      weight: 75
    - name: greeter-v2
      port: 8080
      weight: 25
